; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_getTimezoneOffset.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_getTimezoneOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@msPerMinute = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Dp_getTimezoneOffset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Dp_getTimezoneOffset(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call double @js_todate(i32* %4, i32 0)
  store double %5, double* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load double, double* %3, align 8
  %8 = load double, double* %3, align 8
  %9 = call double @LocalTime(double %8)
  %10 = fsub double %7, %9
  %11 = load double, double* @msPerMinute, align 8
  %12 = fdiv double %10, %11
  %13 = call i32 @js_pushnumber(i32* %6, double %12)
  ret void
}

declare dso_local double @js_todate(i32*, i32) #1

declare dso_local i32 @js_pushnumber(i32*, double) #1

declare dso_local double @LocalTime(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
